--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1068</width>
-    <height>756</height>
+    <width>1165</width>
+    <height>845</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -32,7 +32,7 @@
       <property name="minimumSize">
        <size>
         <width>400</width>
-        <height>400</height>
+        <height>600</height>
        </size>
       </property>
       <property name="maximumSize">
@@ -97,7 +97,14 @@
             </widget>
            </item>
            <item row="7" column="0" colspan="3">
-            <widget class="QTableWidget" name="w_tw_beams"/>
+            <widget class="QTableWidget" name="w_tw_beams">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+            </widget>
            </item>
            <item row="1" column="2">
             <widget class="QLabel" name="w_l_patient_first_name">
@@ -122,6 +129,12 @@
            </item>
            <item row="9" column="0" colspan="3">
             <widget class="QGroupBox" name="w_gb_dicomrt_files">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="title">
               <string>DICOM Files</string>
              </property>
@@ -131,6 +144,9 @@
              <layout class="QGridLayout" name="gridLayout_2">
               <item row="1" column="1">
                <widget class="QLineEdit" name="w_le_dcm_struct_file">
+                <property name="enabled">
+                 <bool>true</bool>
+                </property>
                 <property name="minimumSize">
                  <size>
                   <width>100</width>
@@ -185,6 +201,9 @@
               </item>
               <item row="0" column="1">
                <widget class="QLineEdit" name="w_le_dcm_plan_file">
+                <property name="enabled">
+                 <bool>true</bool>
+                </property>
                 <property name="minimumSize">
                  <size>
                   <width>100</width>
@@ -196,17 +215,17 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_6">
-                <property name="text">
-                 <string>Plan</string>
-                </property>
-               </widget>
-              </item>
               <item row="1" column="0">
                <widget class="QLabel" name="label">
                 <property name="text">
                  <string>Structure Set</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_6">
+                <property name="text">
+                 <string>Plan</string>
                 </property>
                </widget>
               </item>
@@ -246,60 +265,97 @@
         <item>
          <widget class="QGroupBox" name="groupBox">
           <property name="title">
-           <string>MapRT Settings</string>
+           <string>MapRT</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_6">
-           <item row="1" column="0">
-            <widget class="QGroupBox" name="w_gb_obj_file">
-             <property name="title">
-              <string>OBJ File</string>
+           <item row="2" column="1" colspan="2">
+            <widget class="QDoubleSpinBox" name="w_dsb_api_couch_buffer"/>
+           </item>
+           <item row="2" column="3">
+            <widget class="QLabel" name="label_23">
+             <property name="text">
+              <string>cm</string>
              </property>
-             <layout class="QGridLayout" name="gridLayout_3">
-              <item row="0" column="0">
-               <widget class="QLabel" name="label_2">
-                <property name="text">
-                 <string>File Path       </string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QLineEdit" name="w_le_obj_file">
-                <property name="minimumSize">
-                 <size>
-                  <width>100</width>
-                  <height>0</height>
-                 </size>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="2">
-               <widget class="QPushButton" name="w_pb_obj_file">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>25</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>...</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
             </widget>
            </item>
+           <item row="5" column="1" colspan="2">
+            <widget class="QComboBox" name="w_cb_surface_for_map"/>
+           </item>
            <item row="0" column="0">
-            <widget class="QCheckBox" name="w_ch_use_obj">
+            <widget class="QLabel" name="label_18">
              <property name="text">
-              <string>Use .obj File</string>
+              <string>API Status:</string>
              </property>
             </widget>
+           </item>
+           <item row="3" column="3">
+            <widget class="QLabel" name="label_24">
+             <property name="text">
+              <string>cm</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="3">
+            <widget class="QPushButton" name="w_pb_api_ping">
+             <property name="text">
+              <string>Ping API</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1">
+            <widget class="QCheckBox" name="w_ch_high_res">
+             <property name="text">
+              <string>High Resolution Map</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_21">
+             <property name="text">
+              <string>Couch Buffer:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="8" column="3">
+            <widget class="QPushButton" name="w_pb_get_map">
+             <property name="text">
+              <string>Get Map</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="0">
+            <widget class="QLabel" name="label_20">
+             <property name="text">
+              <string>Treatment Room</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1" colspan="2">
+            <widget class="QLabel" name="w_l_api_status">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_22">
+             <property name="text">
+              <string>Patient Buffer:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="QLabel" name="label_19">
+             <property name="text">
+              <string>Surface:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1" colspan="2">
+            <widget class="QDoubleSpinBox" name="w_dsb_api_patient_buffer"/>
+           </item>
+           <item row="7" column="0" colspan="4">
+            <widget class="QTableWidget" name="w_tw_treatment_rooms"/>
            </item>
           </layout>
          </widget>
@@ -312,7 +368,7 @@
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
-            <height>88</height>
+            <height>40</height>
            </size>
           </property>
          </spacer>
@@ -408,17 +464,23 @@
            <string>OBJ</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
-           <item row="2" column="2">
-            <widget class="QLabel" name="w_l_obj_transparency">
+           <item row="1" column="1">
+            <widget class="QPushButton" name="w_pb_obj_color">
              <property name="text">
-              <string>100</string>
+              <string>Select Color</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_10">
-             <property name="text">
-              <string>Transparency:</string>
+           <item row="2" column="1">
+            <widget class="QSlider" name="w_hs_obj_transparency">
+             <property name="maximum">
+              <number>100</number>
+             </property>
+             <property name="value">
+              <number>100</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Orientation::Horizontal</enum>
              </property>
             </widget>
            </item>
@@ -457,65 +519,111 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
-            <widget class="QSlider" name="w_hs_obj_transparency">
-             <property name="maximum">
-              <number>100</number>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="text">
+              <string>Transparency:</string>
              </property>
-             <property name="value">
-              <number>100</number>
-             </property>
-             <property name="orientation">
-              <enum>Qt::Orientation::Horizontal</enum>
+            </widget>
+           </item>
+           <item row="2" column="2">
+            <widget class="QLabel" name="w_l_obj_transparency">
+             <property name="text">
+              <string>100</string>
              </property>
             </widget>
            </item>
            <item row="3" column="0">
-            <widget class="QLabel" name="label_7">
+            <widget class="QCheckBox" name="w_ch_use_obj">
              <property name="text">
-              <string>Orientation:</string>
+              <string>Use .obj File</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
-            <widget class="QWidget" name="widget" native="true">
-             <layout class="QHBoxLayout" name="horizontalLayout_3">
-              <item>
-               <widget class="QRadioButton" name="w_rb_hfs">
+           <item row="4" column="0" colspan="3">
+            <widget class="QGroupBox" name="w_gb_obj_file">
+             <property name="title">
+              <string>OBJ File</string>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_3">
+              <item row="0" column="2">
+               <widget class="QPushButton" name="w_pb_obj_file">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>25</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
                 <property name="text">
-                 <string>HFS</string>
+                 <string>...</string>
                 </property>
                </widget>
               </item>
-              <item>
-               <widget class="QRadioButton" name="w_rb_hfp">
-                <property name="text">
-                 <string>HFP</string>
+              <item row="0" column="1">
+               <widget class="QLineEdit" name="w_le_obj_file">
+                <property name="minimumSize">
+                 <size>
+                  <width>100</width>
+                  <height>0</height>
+                 </size>
                 </property>
                </widget>
               </item>
-              <item>
-               <widget class="QRadioButton" name="w_rb_ffs">
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_2">
                 <property name="text">
-                 <string>FFS</string>
+                 <string>File Path       </string>
                 </property>
                </widget>
               </item>
-              <item>
-               <widget class="QRadioButton" name="w_rb_ffp">
+              <item row="1" column="1">
+               <widget class="QWidget" name="widget" native="true">
+                <layout class="QHBoxLayout" name="horizontalLayout_3">
+                 <item>
+                  <widget class="QRadioButton" name="w_rb_hfs">
+                   <property name="text">
+                    <string>HFS</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QRadioButton" name="w_rb_hfp">
+                   <property name="text">
+                    <string>HFP</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QRadioButton" name="w_rb_ffs">
+                   <property name="text">
+                    <string>FFS</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QRadioButton" name="w_rb_ffp">
+                   <property name="text">
+                    <string>FFP</string>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="label_7">
                 <property name="text">
-                 <string>FFP</string>
+                 <string>Orientation:</string>
                 </property>
                </widget>
               </item>
              </layout>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QPushButton" name="w_pb_obj_color">
-             <property name="text">
-              <string>Select Color</string>
-             </property>
             </widget>
            </item>
           </layout>
@@ -660,12 +768,21 @@
     <item>
      <widget class="QTabWidget" name="tabWidget_2">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
-        <string>Collision Map</string>
+        <string>Map View</string>
        </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_4">
+        <item>
+         <widget class="QGroupBox" name="groupBox_3">
+          <property name="title">
+           <string>MapRT Collision Map</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="tab_4">
        <attribute name="title">
@@ -688,8 +805,8 @@
              </property>
              <property name="minimumSize">
               <size>
-               <width>600</width>
-               <height>600</height>
+               <width>800</width>
+               <height>800</height>
               </size>
              </property>
              <property name="maximumSize">
@@ -714,7 +831,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1068</width>
+     <width>1165</width>
      <height>33</height>
     </rect>
    </property>
