--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1165</width>
-    <height>845</height>
+    <width>1268</width>
+    <height>956</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -268,8 +268,70 @@
            <string>MapRT</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_6">
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_21">
+             <property name="text">
+              <string>Couch Buffer:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="3">
+            <widget class="QPushButton" name="w_pb_get_map">
+             <property name="text">
+              <string>Get Map</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="3">
+            <widget class="QPushButton" name="w_pb_api_ping">
+             <property name="text">
+              <string>Ping API</string>
+             </property>
+            </widget>
+           </item>
            <item row="2" column="1" colspan="2">
-            <widget class="QDoubleSpinBox" name="w_dsb_api_couch_buffer"/>
+            <widget class="QDoubleSpinBox" name="w_dsb_api_couch_buffer">
+             <property name="decimals">
+              <number>1</number>
+             </property>
+             <property name="value">
+              <double>2.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1">
+            <widget class="QCheckBox" name="w_ch_high_res">
+             <property name="text">
+              <string>High Resolution Map</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1" colspan="2">
+            <widget class="QDoubleSpinBox" name="w_dsb_api_patient_buffer">
+             <property name="decimals">
+              <number>1</number>
+             </property>
+             <property name="value">
+              <double>2.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="1" colspan="2">
+            <widget class="QComboBox" name="w_cb_surface_for_map"/>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_22">
+             <property name="text">
+              <string>Patient Buffer:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="0">
+            <widget class="QLabel" name="label_20">
+             <property name="text">
+              <string>Treatment Room</string>
+             </property>
+            </widget>
            </item>
            <item row="2" column="3">
             <widget class="QLabel" name="label_23">
@@ -277,9 +339,6 @@
               <string>cm</string>
              </property>
             </widget>
-           </item>
-           <item row="5" column="1" colspan="2">
-            <widget class="QComboBox" name="w_cb_surface_for_map"/>
            </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_18">
@@ -295,52 +354,10 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="3">
-            <widget class="QPushButton" name="w_pb_api_ping">
-             <property name="text">
-              <string>Ping API</string>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="1">
-            <widget class="QCheckBox" name="w_ch_high_res">
-             <property name="text">
-              <string>High Resolution Map</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_21">
-             <property name="text">
-              <string>Couch Buffer:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="8" column="3">
-            <widget class="QPushButton" name="w_pb_get_map">
-             <property name="text">
-              <string>Get Map</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="0">
-            <widget class="QLabel" name="label_20">
-             <property name="text">
-              <string>Treatment Room</string>
-             </property>
-            </widget>
-           </item>
            <item row="0" column="1" colspan="2">
             <widget class="QLabel" name="w_l_api_status">
              <property name="text">
               <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_22">
-             <property name="text">
-              <string>Patient Buffer:</string>
              </property>
             </widget>
            </item>
@@ -351,11 +368,8 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="1" colspan="2">
-            <widget class="QDoubleSpinBox" name="w_dsb_api_patient_buffer"/>
-           </item>
-           <item row="7" column="0" colspan="4">
-            <widget class="QTableWidget" name="w_tw_treatment_rooms"/>
+           <item row="6" column="1" colspan="2">
+            <widget class="QComboBox" name="w_cb_treatment_room"/>
            </item>
           </layout>
          </widget>
@@ -831,7 +845,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1165</width>
+     <width>1268</width>
      <height>33</height>
     </rect>
    </property>
