--- a/ui/_main_window.ui
+++ b/ui/_main_window.ui
@@ -58,110 +58,7 @@
            <string>Patient Information</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_4">
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_9">
-             <property name="text">
-              <string>Patient ID:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_11">
-             <property name="text">
-              <string>First Name:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="1" colspan="2">
-            <widget class="QLabel" name="w_l_plan_isocenter">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="0">
-            <widget class="QLabel" name="label_14">
-             <property name="text">
-              <string>Body Structure:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_13">
-             <property name="text">
-              <string>Last Name:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
-            <widget class="QLineEdit" name="w_le_patinet_id"/>
-           </item>
-           <item row="4" column="0">
-            <widget class="QLabel" name="label_17">
-             <property name="text">
-              <string>Isocenter:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_12">
-             <property name="text">
-              <string>Plan ID:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="3">
-            <widget class="QPushButton" name="w_pb_esapi_search">
-             <property name="text">
-              <string>Search</string>
-             </property>
-            </widget>
-           </item>
-           <item row="7" column="0" colspan="4">
-            <widget class="QTableWidget" name="w_tw_beams">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="2" colspan="2">
-            <widget class="QComboBox" name="w_cb_body_structure"/>
-           </item>
-           <item row="3" column="2" colspan="2">
-            <widget class="QComboBox" name="w_cb_plan_id"/>
-           </item>
-           <item row="1" column="2" colspan="2">
-            <widget class="QLabel" name="w_l_patient_first_name">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="2" colspan="2">
-            <widget class="QLabel" name="w_l_patient_last_name">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="0" colspan="4">
-            <widget class="QLabel" name="label_15">
-             <property name="text">
-              <string>Beams</string>
-             </property>
-            </widget>
-           </item>
-           <item row="8" column="0" colspan="4">
-            <widget class="QCheckBox" name="w_ch_use_dicomrt">
-             <property name="text">
-              <string>Use Dicom RT Files</string>
-             </property>
-            </widget>
-           </item>
-           <item row="9" column="0" colspan="4">
+           <item row="10" column="0" colspan="4">
             <widget class="QGroupBox" name="w_gb_dicomrt_files">
              <property name="minimumSize">
               <size>
@@ -264,6 +161,119 @@
                </widget>
               </item>
              </layout>
+            </widget>
+           </item>
+           <item row="8" column="0" colspan="4">
+            <widget class="QTableWidget" name="w_tw_beams">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="3">
+            <widget class="QPushButton" name="w_pb_esapi_search">
+             <property name="text">
+              <string>Search</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_11">
+             <property name="text">
+              <string>First Name:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_12">
+             <property name="text">
+              <string>Plan ID:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="9" column="0" colspan="4">
+            <widget class="QCheckBox" name="w_ch_use_dicomrt">
+             <property name="text">
+              <string>Use Dicom RT Files</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="1" colspan="2">
+            <widget class="QLabel" name="w_l_plan_isocenter">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="QLabel" name="label_17">
+             <property name="text">
+              <string>Isocenter:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="0">
+            <widget class="QLabel" name="label_14">
+             <property name="text">
+              <string>Body Structure:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="0" colspan="4">
+            <widget class="QLabel" name="label_15">
+             <property name="text">
+              <string>Beams</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_13">
+             <property name="text">
+              <string>Last Name:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_9">
+             <property name="text">
+              <string>Patient ID:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_26">
+             <property name="text">
+              <string>Course ID:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1" colspan="2">
+            <widget class="QComboBox" name="w_cb_course_id"/>
+           </item>
+           <item row="4" column="1" colspan="2">
+            <widget class="QComboBox" name="w_cb_plan_id"/>
+           </item>
+           <item row="6" column="1" colspan="2">
+            <widget class="QComboBox" name="w_cb_body_structure"/>
+           </item>
+           <item row="0" column="1" colspan="2">
+            <widget class="QLineEdit" name="w_le_patinet_id"/>
+           </item>
+           <item row="1" column="1" colspan="2">
+            <widget class="QLabel" name="w_l_patient_first_name">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1" colspan="2">
+            <widget class="QLabel" name="w_l_patient_last_name">
+             <property name="text">
+              <string/>
+             </property>
             </widget>
            </item>
           </layout>
